# cactus

./: README.md  llms.txt
.github/workflows/: pypi.yml  python.yml  release.yml
apple/: CMakeLists.txt  Info.plist  build.sh
bindings/rust/: cactus.rs
blog/: gemma4.md  hybrid_transcription.md  lfm2.5_350m.md
cactus-code/: package-lock.json
cactus-engine/: CMakeLists.txt  cactus_engine.h  test.sh
cactus-engine/src/: complete.cpp  constraints.cpp  embed.cpp  engine.h  init.cpp  model.cpp  npu_ane.h  npu_ane.mm  transcribe.cpp  utils.h
cactus-engine/tests/: run.cpp  test_benchmark.cpp  test_embed.cpp  test_index.cpp  test_kv_compress.cpp  test_llm.cpp  test_needle.cpp  test_rag.cpp  test_stt.cpp  test_telemetry.cpp  test_utils.cpp  test_utils.h  test_vlm.cpp  transcribe.cpp
cactus-engine/tests/android/: run.sh
cactus-engine/tests/ios/: configure_xcode.rb  run.sh
cactus-graph/: CMakeLists.txt  cactus_graph.h
cactus-graph/src/: builder.cpp  execute.cpp  graph_ffi.cpp  io.cpp  metal_plan.cpp  metal_runtime.cpp  ops_cache.cpp  ops_conv.cpp  ops_math.cpp  ops_nn.cpp  ops_tensor.cpp  param_io.cpp
cactus-graph/tests/: test_metal_parity.cpp
cactus-kernels/: CMakeLists.txt  metal_backend.h
cactus-kernels/cmake/: embed_msl.cmake
cactus-kernels/src/: blas.cpp  cactus_kernels.metal  dsp.cpp  matmul.cpp  metal_backend.mm  metal_backend_stub.cpp
docs/: cactus_engine.md  cactus_graph.md  cactus_transpiler.md  choose-bindings.md
python/: README.md  pyproject.toml  requirements.txt
python/cactus/: __init__.py  server.py
python/cactus/bindings/: cactus.py
python/cactus/cli/: __init__.py  code.py  common.py  compile.py  convert.py  download.py  list.py  model.py  run.py  runtime.py  serve.py  test.py  transpile.py  upload.py  utils.py
python/cactus/convert/: cli.py  handoff_probe.py
python/cactus/convert/cactus_adapters/: weight_patterns.py
python/cactus/convert/model_adapters/: naming.py
python/cactus/convert/tests/: test_naming_qdq.py
python/cactus/models/needle/: __init__.py  configuration_needle.py  modeling_needle.py  tokenization_needle.py
python/cactus/transpile/: README.md  component_pipeline.py  hf_model.py  model_adapters.py  runtime_compat.py  tdt_runtime.py
python/tests/: bundles.py  test_bindings.py  test_cli_run.py  test_cli_transpile_defaults.py  test_component_plan.py  test_download.py  test_model.py  test_server_live.py
v2.0/: 404.html  index.html  sitemap.xml
v2.0/CONTRIBUTING/: index.html
v2.0/DCO/: index.html
v2.0/android/: index.html
v2.0/apple/: index.html
v2.0/blog/: index.html
v2.0/blog/gemma4/: index.html
v2.0/blog/hybrid_transcription/: index.html
v2.0/blog/lfm2.5_350m/: index.html
v2.0/blog/lfm2_24b_a2b/: index.html
v2.0/blog/parakeet/: index.html
v2.0/blog/turboquant-h/: index.html
v2.0/docs/cactus_engine/: index.html
v2.0/docs/cactus_graph/: index.html
v2.0/docs/cactus_hybrid/: index.html
v2.0/docs/cactus_index/: index.html
v2.0/docs/cactus_kernels/: index.html
v2.0/docs/cactus_quants/: index.html
v2.0/docs/cactus_transpiler/: index.html
v2.0/docs/choose-bindings/: index.html
v2.0/docs/compatibility/: index.html
v2.0/docs/finetuning/: index.html
v2.0/docs/quickstart/: index.html
v2.0/flutter/: index.html
v2.0/kotlin/: index.html
v2.0/python/: index.html
v2.0/react-native/: index.html
v2.0/rust/: index.html
v2.0/search/: search_index.json
v2.0/swift/: index.html
